images tag and validate (#32)
